--- a/project-settings.json
+++ b/project-settings.json
@@ -3,22 +3,23 @@
   "listIdentifier": "dia-{i}",
   "listPatternIdentifier": "dia",
   "title": "Day {i}",
+  "externalBaseUrl": "https://codepen.io/levi-pires/pen",
   "externalUrls": [
-    "https://codepen.io/levi-pires/pen/gOMprvM",
-    "https://codepen.io/levi-pires/pen/abZONQr",
-    "https://codepen.io/levi-pires/pen/MWewyZq",
-    "https://codepen.io/levi-pires/pen/ZEOGWwm",
-    "https://codepen.io/levi-pires/pen/jOrPqRx",
-    "https://codepen.io/levi-pires/pen/QWEbNRm",
-    "https://codepen.io/levi-pires/pen/BazNKgw",
-    "https://codepen.io/levi-pires/pen/vYKOKEy",
-    "https://codepen.io/levi-pires/pen/yLJNJyQ",
-    "https://codepen.io/levi-pires/pen/qBNdNdd",
-    "https://codepen.io/levi-pires/pen/zYBGBGg",
-    "https://codepen.io/levi-pires/pen/rNLVLOg",
-    "https://codepen.io/levi-pires/pen/eYzNzJo",
-    "https://codepen.io/levi-pires/pen/OJXVXNO",
-    "https://codepen.io/levi-pires/pen/dyXoXXp",
-    "https://codepen.io/levi-pires/pen/zYqMJwR"
+    "/gOMprvM",
+    "/abZONQr",
+    "/MWewyZq",
+    "/ZEOGWwm",
+    "/jOrPqRx",
+    "/QWEbNRm",
+    "/BazNKgw",
+    "/vYKOKEy",
+    "/yLJNJyQ",
+    "/qBNdNdd",
+    "/zYBGBGg",
+    "/rNLVLOg",
+    "/eYzNzJo",
+    "/OJXVXNO",
+    "/dyXoXXp",
+    "/zYqMJwR"
   ]
 }
